# pycounts

./: LICENSE  pyproject.toml
docs/: example.ipynb
src/pycounts/: plotting.py  pycounts.py
tests/: test_pycounts.py
