[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculate word counts in a text file."
license = "MIT"
authors = ["Franklin Gómez Otero <fgomezotero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
